--- a/roles/webserver/tasks/nginx-letsencrypt.yml
+++ b/roles/webserver/tasks/nginx-letsencrypt.yml
@@ -4,8 +4,9 @@
     image: jrcs/letsencrypt-nginx-proxy-companion
     name: nginx-proxy-letsencrypt
     env:
-      NGINX_DOCKER_GEN_CONTAINER: nginx-proxy-gen
+      DEBUG: "true"
       DEFAULT_EMAIL: "{{ ADMIN_EMAIL }}"
+      NGINX_DOCKER_GEN_CONTAINER: "nginx-proxy-gen"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
