ini-style hosts example assume /etc/ansible/hosts location

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,5 @@
+# see example ansible.cfg file
+# https://github.com/ansible/ansible/blob/devel/examples/ansible.cfg
+
 [defaults]
-inventory = ./hosts.yml
+inventory = /etc/ansible/hosts
