--- a/roles/webserver/tasks/docker-gen.yml
+++ b/roles/webserver/tasks/docker-gen.yml
@@ -11,11 +11,14 @@
 
 - name: pull and run docker-gen container
   docker_container:
-    image: jwilder/docker-gen
+    image: jwilder/docker-gen:latest
     name: nginx-proxy-gen
+    pull: true
     volumes:
       - /usr/local/etc/nginx/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
     volumes_from:
       - nginx-proxy
-    entrypoint: "/usr/local/bin/docker-gen -notify-sighup nginx-proxy -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf"
+    entrypoint: "/usr/local/bin/docker-gen -notify-sighup nginx-proxy -watch
+      -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl
+      /etc/nginx/conf.d/default.conf"
