--- a/hosts.example2.ini
+++ b/hosts.example2.ini
@@ -9,6 +9,10 @@ serverB ansible_port=54321 ansible_host=12.345.678.910 ansible_private_key_file=
 [virtualbox]
 serverX ansible_host=192.168.0.169 ansible_private_key_file=/Users/thisguy/.ssh/my_rsa ansible_user=root
 
+[archlinux]
+serverA
+serverB
+
 [east]
 serverB
 
