--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,4 +1,7 @@
 ---
 - import_tasks: packages.yml
+  tags: [common, packages]
 - import_tasks: hostname.yml
+  tags: [common, host]
 - import_tasks: user.yml
+  tags: [common, host]
