use a file for custom nginx proxy settings

--- a/roles/webserver/tasks/nginx-proxy.yml
+++ b/roles/webserver/tasks/nginx-proxy.yml
@@ -1,4 +1,14 @@
 ---
+- name: ensure /usr/local/etc/nginx directory is present
+  file:
+    path: /usr/local/etc/nginx
+    state: directory
+
+- name: copy custom_proxy_settings file
+  copy:
+    src: custom_proxy_settings.conf
+    dest: /usr/local/etc/nginx/
+
 - name: Run public-facing nginx-proxy container
   docker_container:
     image: nginx:latest
@@ -8,6 +18,7 @@
       - "80:80"
       - "443:443"
     volumes:
+      - /usr/local/etc/nginx/custom_proxy_settings.conf:/etc/nginx/conf.d/custom_proxy_settings.conf
       - /etc/nginx/certs
       - /etc/nginx/conf.d
       - /etc/nginx/vhost.d
