--- a/roles/webserver/tasks/nginx-proxy.yml
+++ b/roles/webserver/tasks/nginx-proxy.yml
@@ -14,6 +14,7 @@
     image: nginx:latest
     name: nginx-proxy
     pull: true
+    restart_policy: always
     ports:
       - "80:80"
       - "443:443"
