--- a/roles/webserver/tasks/nginx-proxy.yml
+++ b/roles/webserver/tasks/nginx-proxy.yml
@@ -15,6 +15,8 @@
     name: nginx-proxy
     pull: true
     restart_policy: always
+    env:
+      RESOLVERS: "8.8.8.8 8.8.4.4"
     ports:
       - "80:80"
       - "443:443"
