--- a/roles/webserver/tasks/nginx-letsencrypt.yml
+++ b/roles/webserver/tasks/nginx-letsencrypt.yml
@@ -6,6 +6,7 @@
     pull: true
     restart_policy: always
     env:
+      ACME_CA_URI: "{{ ACME_CA_URI }}"
       DEBUG: "{{ LETSENCRYPT_DEBUG }}"
       DEFAULT_EMAIL: "{{ ADMIN_EMAIL }}"
       NGINX_DOCKER_GEN_CONTAINER: "nginx-proxy-gen"
