--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -4,8 +4,8 @@
 - import_tasks: nginx-proxy.yml
   tags: [server, nginx]
 - import_tasks: docker-gen.yml
-  tags: server
+  tags: [server, nginx]
 - import_tasks: nginx-letsencrypt.yml
   tags: [server, nginx]
-- import_tasks: packetbeat.yml
-  tags: [server, packetbeat]
+- import_tasks: elastic.yml
+  tags: [server, elastic]
