--- a/roles/webserver/tasks/nginx-letsencrypt.yml
+++ b/roles/webserver/tasks/nginx-letsencrypt.yml
@@ -4,9 +4,11 @@
     image: jrcs/letsencrypt-nginx-proxy-companion:latest
     name: nginx-proxy-letsencrypt
     pull: true
+    recreate: yes
     restart_policy: always
     env:
-      ACME_CA_URI: "{{ ACME_CA_URI }}"
+      # uncomment for letsencrypt dry-run:
+      #ACME_CA_URI: "{{ ACME_CA_URI }}"
       DEBUG: "{{ LETSENCRYPT_DEBUG }}"
       DEFAULT_EMAIL: "{{ ADMIN_EMAIL }}"
       NGINX_DOCKER_GEN_CONTAINER: "nginx-proxy-gen"
@@ -14,3 +16,4 @@
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - nginx-proxy
+
