--- a/initialize.yml
+++ b/initialize.yml
@@ -6,3 +6,11 @@
       raw: test -e /usr/bin/python || (pacman -S --noconfirm python)
       register: output
       changed_when: output.stdout
+
+- hosts: clearlinux 
+  gather_facts: False
+  pre_tasks:
+    - name: install python
+      raw: test -e /usr/bin/python || (swupd bundle-add python-basic)
+      register: output
+      changed_when: output.stdout
