--- a/roles/webserver/tasks/nginx-letsencrypt.yml
+++ b/roles/webserver/tasks/nginx-letsencrypt.yml
@@ -7,13 +7,11 @@
     recreate: yes
     restart_policy: always
     env:
-      # uncomment for letsencrypt dry-run:
-      #ACME_CA_URI: "{{ ACME_STAGE_URI }}"
-      DEBUG: "{{ LETSENCRYPT_DEBUG }}"
+      ACME_CA_URI: "{{ ACME_STAGE_URI }} | default()"
+      DEBUG: "{{ LETSENCRYPT_DEBUG | default(false) }}"
       DEFAULT_EMAIL: "{{ ADMIN_EMAIL }}"
       NGINX_DOCKER_GEN_CONTAINER: "nginx-proxy-gen"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     volumes_from:
       - nginx-proxy
-
