--- a/roles/webserver/tasks/nginx-letsencrypt.yml
+++ b/roles/webserver/tasks/nginx-letsencrypt.yml
@@ -7,7 +7,7 @@
     recreate: yes
     restart_policy: always
     env:
-      ACME_CA_URI: "{{ ACME_STAGE_URI }} | default()"
+      # ACME_CA_URI: "{{ ACME_STAGE_URI }} | default()"
       DEBUG: "{{ LETSENCRYPT_DEBUG | default(false) }}"
       DEFAULT_EMAIL: "{{ ADMIN_EMAIL }}"
       NGINX_DOCKER_GEN_CONTAINER: "nginx-proxy-gen"
