--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,4 +2,4 @@
 # https://github.com/ansible/ansible/blob/devel/examples/ansible.cfg
 
 [defaults]
-inventory = /etc/ansible/hosts
+inventory = inventory
