--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -1,7 +1,11 @@
 ---
+- import_tasks: shared-volumes.yml
+  tags: webserver
+- import_tasks: proxy-network.yml
+  tags: webserver
 - import_tasks: nginx-proxy.yml
   tags: webserver
 - import_tasks: docker-gen.yml
   tags: webserver
-- import_tasks: nginx-letsencrypt.yml
+- import_tasks: acme-companion.yml
   tags: webserver
