--- a/roles/webserver/tasks/docker-gen.yml
+++ b/roles/webserver/tasks/docker-gen.yml
@@ -8,10 +8,12 @@
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - nginx_vhost.d:/etc/nginx/vhost.d
       - nginx_certs:/etc/nginx/certs:ro
-    entrypoint: >
-      /usr/local/bin/docker-gen
-      -notify-sighup nginx-proxy
-      -watch
-      /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    entrypoint:
+      - /usr/local/bin/docker-gen
+      - -notify-sighup
+      - nginx-proxy
+      - -watch
+      - /etc/docker-gen/templates/nginx.tmpl
+      - /etc/nginx/conf.d/default.conf
     networks:
       - name: proxy_network
