--- a/roles/webserver/tasks/shared-volumes.yml
+++ b/roles/webserver/tasks/shared-volumes.yml
@@ -3,6 +3,8 @@
     name: "{{ item }}"
     state: present
   loop:
+    - nginx_acme
     - nginx_certs
-    - nginx_vhost_d
+    - nginx_conf
     - nginx_html
+    - nginx_vhost
